--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+pytest = "^7.4.2"
+pytest-watch = "^4.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
